# pre-commit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .ruff.toml  LICENSE  README.md  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg  tox.ini
.github/workflows/: check.yml
pre_commit_hooks/: docker_multiline_cmds.py  markdown_detect_nonref_links.py  prevent_commit_to_default_branch.py  prevent_push_to_default_branch.py  prevent_returning_fastapi_httpexceptions.py  rego_unsafe_boolean_comparison.py
tests/: run.sh  test_docker_multiline_cmd.py  test_dockerfile_multiline_cmd.py  test_markdown_nonref_links.py  test_prevent_commit_to_default_branch.py  test_prevent_push_to_default_branch.py  test_prevent_returning_fastapi_http_exceptions.py  test_rego_unsafe_boolean_comparison.py
tests/harness/: Dockerfile_bad  Dockerfile_good  nonrefs.md  raise_httpexception.py  refs.md  return_httpexception.py  safe_boolean_comparison.rego  unsafe_boolean_comparison.rego
