[metadata]
name = pre_commit_hooks
version = 0.1.0
author = pat
author_email = pat@p15r.net
description = Pre-commit hooks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/p15r/pre-commit-hooks
project_urls =
    Bug Tracker = https://github.com/p15r/pre-commit-hooks/issues
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3
install_requires =

[options.entry_points]
console_scripts =
    markdown-detect-nonref-links = pre_commit_hooks.markdown_detect_nonref_links:main
    rego-unsafe-boolean-comparison = pre_commit_hooks.rego_unsafe_boolean_comparison:main

