[metadata]
name = pre_commit_hooks
version = 0.5.0
author = patrick
author_email = patrick@p15r.net
description = Pre-commit hooks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/p15r/pre-commit-hooks
project_urls =
    Bug Tracker = https://github.com/p15r/pre-commit-hooks/issues
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.11
install_requires =
    astroid == 3.3.9    # for `prevent_returning_fastapi_httpexceptions.py`

[options.entry_points]
console_scripts =
    markdown-detect-nonref-links = pre_commit_hooks.markdown_detect_nonref_links:main
    rego-unsafe-boolean-comparison = pre_commit_hooks.rego_unsafe_boolean_comparison:main
    docker-multiline-cmds = pre_commit_hooks.docker_multiline_cmds:main
    prevent-commit-to-default-branch = pre_commit_hooks.prevent_commit_to_default_branch:main
    prevent-returning-fastapi-httpexceptions = pre_commit_hooks.prevent_returning_fastapi_httpexceptions:main
